--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,20 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        admin:
+            pattern: ^/administration
+
+            provider: in_database
+
+            form_login:
+                login_path: admin-account-login
+                check_path: admin-account-login
+
+            logout:
+                path: account-logout
+                target: account-login
+
         main:
             lazy: true
             provider: in_database
@@ -39,5 +53,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/administration/connexion, roles: IS_AUTHENTICATED_ANONYMOUSLY}
+        - { path: ^/administration, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
