--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=bdd3669544dc8d361d3ea17b746f0673
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/e-change?serverVersion=5.7"
+DATABASE_URL="mysql://root:Ainadeveloppeur1998!@127.0.0.1:3306/e-change?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
